--- a/HTML+CSS/modulo 03/022/fundo04.html
+++ b/HTML+CSS/modulo 03/022/fundo04.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body {
-            background-image: url(imagens/pattern001.png);
-            background-size: 200px 200px;
-            background-repeat: repeat-x;
+        body{
+            height: 100vh;
+            background-image: url(imagens/pattern004.png);
+            background-repeat: no-repeat;
+            background-position: center;
+            border-radius: 50%;
         }
     </style>
 </head>
