centralização de conteúdo

--- a/HTML+CSS/modulo 03/022/fundo05.html
+++ b/HTML+CSS/modulo 03/022/fundo05.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            height: 80vh;
+            height: 100vh;
             background-image: url(imagens/pexels-olya-kobruseva-7845749.jpg);
             background-repeat: no-repeat;
             background-size: cover;
@@ -21,9 +21,20 @@
 
         }
 
+        #content {
+            border: 3px solid rgb(0, 0, 0);
+            width: 500px;
+            height: 500px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
     </style>
 </head>
 <body>
-    <div id="contain"></div>
+    <div id="content">
+        
+    </div>
 </body>
 </html>
