--- a/HTML+CSS/modulo 03/022/fundo06.html
+++ b/HTML+CSS/modulo 03/022/fundo06.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
-        body {
-            background-color: black;
+        body { 
+            height: 100vh;
+            /* background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed; */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
             }
+
+            
 
         main {
             background-color: rgb(231, 231, 231);
-            width: 400px;
+            max-width: 400px;
             padding: 20px;
             text-align: justify;
             margin: auto;
             box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.329);
-            box-shadow: 2px 2px 4px rgba(59, 59, 59, 0.479);
-
         }
 
         main > p {
@@ -32,7 +37,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati aliquam ratione voluptates aut delectus eveniet id soluta laboriosam. Vero quisquam ducimus perspiciatis sit magni repellat, fugiat nesciunt quae at dignissimos! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde quasi, eaque sit minus modi pariatur voluptatibus culpa cupiditate accusantium consequatur id fugit eum accusamus soluta perferendis, esse doloremque consequuntur nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quae error sapiente officiis delectus dolorem quaerat quasi, quos debitis necessitatibus reprehenderit ut vitae, saepe incidunt minima perspiciatis doloribus est fugiat!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati aliquam ratione voluptates aut delectus eveniet id soluta laboriosam. Vero quisquam ducimus perspiciatis sit magni repellat, fugiat nesciunt quae at dignissimos! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde quasi, eaque sit minus modi pariatur voluptatibus culpa cupiditate accusantium consequatur id fugit eum accusamus soluta perferendis, esse doloremque consequuntur nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quae error sapiente officiis delectus dolorem quaerat quasi, quos debitis necessitatibus reprehenderit ut vitae, saepe incidunt minima perspiciatis doloribus est fugiat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sint voluptatem necessitatibus quaerat ut distinctio? Labore voluptates ad deserunt cum exercitationem, laboriosam aspernatur consequatur dignissimos accusamus in temporibus quisquam! Facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut porro accusamus provident adipisci culpa velit autem eius at officia nobis quibusdam, totam neque nisi quam iste, ullam, ea nostrum quis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis totam possimus nemo labore eos enim quasi sit ipsum, ea cumque a ratione ex dolorum eum temporibus nulla ducimus fuga beatae! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum eveniet odit saepe impedit adipisci omnis neque porro ut iusto, optio amet excepturi molestias dolorem mollitia cupiditate culpa consequatur sequi eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla facere porro officiis voluptatibus modi. Eligendi, quia pariatur fuga molestias beatae error! Autem quibusdam quos adipisci dolores. Dolorem, distinctio reiciendis? Fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque recusandae veritatis, ipsam voluptas error, dolores nulla reiciendis ut suscipit, ab ea nemo labore voluptatibus accusantium eligendi vero quis officia delectus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde provident voluptatibus sed corrupti maxime esse quisquam! Perferendis consequuntur saepe, error totam assumenda dolores dolorem delectus, cumque eveniet debitis, a eum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis magni in doloribus minima non excepturi tempore minus maxime, error quia maiores illo beatae aspernatur id, est officia repudiandae aliquid at. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id non magnam aliquam asperiores dicta. Rerum, quae cumque eius dolore dolores ullam alias at nulla fugiat nemo, quasi ratione debitis velit.</p>
     </main>
 </body>
 </html>
