--- a/HTML+CSS/modulo 03/desafio/d12/index.html
+++ b/HTML+CSS/modulo 03/desafio/d12/index.html
@@ -29,7 +29,7 @@
         </p>
     </section>
  
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -64,7 +64,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -99,6 +99,10 @@
 
     <footer>
         <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://cursoemvideo.com" target="_blank">CursoemVideo</a>.</p>
+
+        <p id="att">
+            Photo by <a href="https://unsplash.com/@lemonvlad?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Vladislav Klapin</a> on <a href="https://unsplash.com/s/photos/emoji?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+        </p>
     </footer>
 </body>
 </html>
